# blitz3d_xgrade

./: .gitignore  CMakeLists.txt  InitProj.bat  LICENSE.md  LICENSE.txt  README.md  XrBuild.bat
BLITZ3D_INSTALL/: LICENSE.txt  bbsetup.psd  install.nsi  versions.txt
asm_makeinsts/: asm_insts.cpp  asm_insts_BACKUP.cpp
bblaunch/: CMakeLists.txt  bblaunch.aps  bblaunch.cpp
bbruntime/: CMakeLists.txt  basic.cpp  bbaudio.cpp  bbaudio.h  bbaudio_soloud.cpp  bbbank.cpp  bbblitz3d.cpp  bbfilesystem.cpp  bbgraphics.cpp  bbmath.cpp  bbruntime.cpp  bbruntime.h  bbsockets.cpp  bbstream.cpp  bbstring.cpp  bbsys.cpp  bbsys.h  resource.h  std.h
bbruntime_dll/: CMakeLists.txt  bbruntime_dll.aps  bbruntime_dll.cpp  bbruntime_dll.rc
blitz/: libs.cpp  libs.h  main.cpp
blitz3d/: CMakeLists.txt  geom.h  listener.cpp  listener.h  object.cpp  object.h
blitzide/: CMakeLists.txt  about.cpp  blitzide.aps  blitzide.cpp  blitzide.h  blitzide.rc  editor.cpp  editor.h  htmlhelp.cpp  libs.cpp  mainframe.cpp  mainframe.h  prefs.cpp  resource.h  stdafx.h
compiler/: declnode.cpp  exprnode.cpp  exprnode.h  node.cpp  parser.cpp  parser.h  prognode.cpp  stmtnode.cpp  stmtnode.h  toker.cpp  toker.h  type.h  varnode.cpp
config/: CMakeLists.txt  config.h  versionconfig.cpp  versionconfig.h
debugger/: CMakeLists.txt  debugger.aps  debugger.h  debuggerapp.cpp  mainframe.cpp  mainframe.h
freeimage/: FreeImage.h
gxruntime/: CMakeLists.txt  ddutil.h  gxaudio.cpp  gxaudio.h  gxcanvas.cpp  gxchannel.cpp  gxchannel.h  gxgraphics.cpp  gxgraphics.h  gxruntime.h  gxruntime_b3d.cpp  gxruntime_b3d.h  gxruntime_sgd.h  gxscene.cpp  gxscene.h  (+2 more)
libvorbis/: CMakeLists.txt
(+47 files in other folders)
